Adding changes to README.md

--- a/S4/EVA5_Session_4.ipynb
+++ b/S4/EVA5_Session_4.ipynb
@@ -36,7 +36,8 @@
         "\n",
         "!pip install torchsummary\n",
         "use_cuda = torch.cuda.is_available()\n",
-        "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n"
+        "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+        "print(device)"
       ],
       "execution_count": 4,
       "outputs": [
