--- a/Assignment-6/Assignment6.ipynb
+++ b/Assignment-6/Assignment6.ipynb
@@ -1009,7 +1009,7 @@
         "import numpy as np\n",
         "\n",
         "import torch\n",
-        "from torchvision import datasets, transforms\n",
+        "# from torchvision import datasets, transforms\n",
         "from torch.utils.data import DataLoader\n",
         "from torchsummary import summary\n",
         "from torch import nn\n",
@@ -1017,9 +1017,9 @@
         "from torch.functional import F\n",
         "from torchvision import datasets\n",
         "\n",
-        "\n",
+        "import data_process\n",
         "from model import *\n",
-        "from data import *\n",
+        "from data_process import getdata\n",
         "from train import *\n",
         "from test import *\n",
         "\n",
@@ -1032,7 +1032,7 @@
         "\n",
         "os.chdir('d:\\Python Projects\\EVA')"
       ],
-      "execution_count": 27,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1048,17 +1048,18 @@
         "a.download_train_data()\n",
         "a.download_train_data()"
       ],
-      "execution_count": 39,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'GetTrainData' object has no attribute 'download_train_data'",
+          "ename": "NameError",
+          "evalue": "name 'datasets' is not defined",
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-39-b7bd5c351c62>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGetTrainData\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./data'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload_train_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload_train_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;31mAttributeError\u001b[0m: 'GetTrainData' object has no attribute 'download_train_data'"
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-23-b7bd5c351c62>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGetTrainData\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./data'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload_train_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload_train_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;32md:\\Python Projects\\EVA\\Assignment-6\\data_process\\getdata.py\u001b[0m in \u001b[0;36mdownload_train_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mGetTrainData\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdir_name\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdirname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdir_name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mdownload_train_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'datasets' is not defined"
           ]
         }
       ]
