--- a/Assignment-6/Assignment-6.ipynb
+++ b/Assignment-6/Assignment-6.ipynb
@@ -1276,6 +1276,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig.savefig(os.path.join('metrics.png'))"
+      ]
     }
   ]
 }
