--- a/Assignment-8/Assignment8.ipynb
+++ b/Assignment-8/Assignment8.ipynb
@@ -7,8 +7,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "pytorch",
+      "display_name": "pytorch"
     },
     "accelerator": "GPU"
   },
